feat: create passport service to handle authentication strategies

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/crm_db?schema=public"
+NODE_ENV=dev
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/orgbooks_db?schema=public"
 POSTGRESDB_USER=postgres
 POSTGRESDB_ROOT_PASSWORD=1234
-POSTGRESDB_DATABASE=crm_db
-POSTGRESDB_LOCAL_PORT=5432
-POSTGRESDB_DOCKER_PORT=5432
+POSTGRESDB_DATABASE=orgbooks_db
 PGADMIN_DEFAULT_EMAIL=ryanlucas2018gz@gmail.com
 PGADMIN_DEFAULT_PASSWORD=12345
-NODE_LOCAL_PORT=3000
-NODE_DOCKER_PORT=3000
+EXPIRES_IN=7days
+API_LOCAL_PORT=3000
+API_DOCKER_PORT=3000
+POSTGRESDB_LOCAL_PORT=5432
+POSTGRESDB_DOCKER_PORT=5432
+PGVIEWER_LOCAL_PORT=16546
+PGVIEWER_DOCKER_PORT=80
+SESSION_SECRET=secret_12039alk
+
