--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index",
     "scripts": {
-        "start:dev": "nodemon --watch src src/server.ts",
+        "dev": "ts-node-dev --files -r tsconfig-paths/register src/index.ts",
+        "start": "ts-node -r tsconfig-paths/register src/index.ts",
         "format": "prettier --log-level warn --write src//**/*.{jsx,js,ts}",
         "lint": "eslint . --ext .ts --fix",
         "prepare": "husky install"
@@ -15,8 +16,11 @@
     "devDependencies": {
         "@commitlint/cli": "^18.6.0",
         "@commitlint/config-conventional": "^18.6.0",
+        "@types/bcrypt": "^5.0.2",
         "@types/body-parser": "^1.19.5",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/express-session": "^1.17.10",
         "@types/node": "^20.11.15",
         "@types/passport": "^1.0.16",
         "@types/passport-local": "^1.0.38",
@@ -31,17 +35,22 @@
         "lint-staged": "^15.2.1",
         "nodemon": "^3.0.3",
         "prettier": "^3.2.4",
+        "tsconfig-paths": "^4.2.0",
         "typescript": "^5.3.3"
     },
     "dependencies": {
         "@prisma/client": "^5.9.0",
+        "@quixo3/prisma-session-store": "^3.1.13",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
+        "express-session": "^1.18.0",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
         "prisma": "^5.9.0",
+        "ts-node-dev": "^2.0.0",
         "winston": "^3.11.0",
         "zod": "^3.22.4"
     }
