--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index",
     "scripts": {
-        "dev": "ts-node-dev --files -r tsconfig-paths/register src/index.ts",
-        "start": "ts-node -r tsconfig-paths/register src/index.ts",
+        "dev": "tsx src/index.ts",
+        "start": "tsx src/index.ts",
         "format": "prettier --log-level warn --write src//**/*.{jsx,js,ts}",
         "lint": "eslint . --ext .ts --fix",
         "prepare": "husky install"
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@commitlint/cli": "^18.6.0",
         "@commitlint/config-conventional": "^18.6.0",
+        "@mermaid-js/mermaid-cli": "^10.8.0",
         "@types/bcrypt": "^5.0.2",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
@@ -35,6 +36,7 @@
         "lint-staged": "^15.2.1",
         "nodemon": "^3.0.3",
         "prettier": "^3.2.4",
+        "prisma-erd-generator": "^1.11.2",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.3.3"
     },
